--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -21,7 +21,21 @@
         <item name="android:background">@color/teal</item>
     </style>
 
+    <style name="Theme.AppCompat.Light.NoActionBar.FullScreen" parent="@style/Theme.AppCompat.Light.NoActionBar">
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowActionBar">false</item>
+        <item name="android:windowFullscreen">true</item>
+        <!--<item name="android:windowContentOverlay">@null</item>-->
+    </style>
+
     <style name="AlertDialogStyle" parent="Theme.AppCompat.Light.Dialog.Alert">
+        <item name="colorAccent">@color/teal</item>
+        <item name="android:layout_margin">5dp</item>
+        <item name="android:textColor">@color/dark_grey</item>
+    </style>
+
+    <style name="EditTextStyle" parent="TextAppearance.AppCompat">
+        <item name="android:textColor">@color/dark_grey</item>
     </style>
 
     <style name="DialogTheme" parent="android:Theme.Dialog">
