update lockscreen alarmreceiver

--- a/app/src/main/res/layout/activity_experience_sampling.xml
+++ b/app/src/main/res/layout/activity_experience_sampling.xml
@@ -26,9 +26,10 @@
         android:padding="15dp">
 
 
-        <!--<ScrollView
+        <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">-->
+            android:layout_height="match_parent"
+            android:fillViewport="true">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -564,7 +565,7 @@
                     android:textColor="@android:color/white"
                     android:textSize="@dimen/send_text_size" />
             </LinearLayout>
-        <!--</ScrollView>-->
+        </ScrollView>
     </RelativeLayout>
 
 </RelativeLayout>
