--- a/app/src/main/res/layout/activity_lockscreen.xml
+++ b/app/src/main/res/layout/activity_lockscreen.xml
@@ -179,7 +179,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/finger_text_marginbottom"
-        android:text="@string/pinlock_pin"
+        android:text="@string/fingererror_title"
+        android:textAlignment="center"
         android:textColor="@color/text_fingerprint"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
