--- a/app/src/main/res/layout/activity_initial_survey2.xml
+++ b/app/src/main/res/layout/activity_initial_survey2.xml
@@ -79,10 +79,23 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="20dp"
                 android:padding="20dp"
-                android:text="How often do you have problems with your fingerprint authentication?"
+                android:text="@string/fingererror_scenario"
                 android:textAlignment="center"
                 android:textColor="@color/question_text_color"
                 android:textSize="@dimen/question_text_size" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="20dp"
+                android:paddingTop="0dp"
+                android:paddingBottom="0dp"
+                android:paddingLeft="20dp"
+                android:paddingRight="20dp"
+                android:text="@string/fingererror_explanation"
+                android:textAlignment="center"
+                android:textColor="@color/question_text_color"
+                android:textSize="16sp" />
 
             <TextView
                 android:id="@+id/never"
