--- a/app/src/main/res/layout/activity_experience_sampling2.xml
+++ b/app/src/main/res/layout/activity_experience_sampling2.xml
@@ -121,6 +121,7 @@
                     android:padding="@dimen/header_padding"
                     android:text="@string/user_location_string"
                     android:textColor="@color/dark_grey"
+                    android:textStyle="bold"
                     android:textSize="@dimen/header_text_size" />
 
                 <RadioGroup
@@ -138,6 +139,7 @@
                         android:onClick="onLocationRadioButtonClicked"
                         android:text="@string/public_transportation"
                         android:textColor="@color/dark_grey"
+                        android:layout_marginTop="@dimen/radio_button_margin"
                         android:textSize="@dimen/radio_button_textsize" />
 
                     <RadioButton
@@ -147,6 +149,7 @@
                         android:onClick="onLocationRadioButtonClicked"
                         android:text="@string/at_work"
                         android:textColor="@color/dark_grey"
+                        android:layout_marginTop="@dimen/radio_button_margin"
                         android:textSize="@dimen/radio_button_textsize" />
 
                     <RadioButton
@@ -155,6 +158,7 @@
                         android:layout_height="wrap_content"
                         android:onClick="onLocationRadioButtonClicked"
                         android:text="@string/at_uni"
+                        android:layout_marginTop="@dimen/radio_button_margin"
                         android:textColor="@color/dark_grey"
                         android:textSize="@dimen/radio_button_textsize" />
 
@@ -164,6 +168,7 @@
                         android:layout_height="wrap_content"
                         android:onClick="onLocationRadioButtonClicked"
                         android:text="@string/at_home"
+                        android:layout_marginTop="@dimen/radio_button_margin"
                         android:textColor="@color/dark_grey"
                         android:textSize="@dimen/radio_button_textsize" />
 
@@ -173,6 +178,7 @@
                         android:layout_height="wrap_content"
                         android:onClick="onLocationRadioButtonClicked"
                         android:text="@string/workout"
+                        android:layout_marginTop="@dimen/radio_button_margin"
                         android:textColor="@color/dark_grey"
                         android:textSize="@dimen/radio_button_textsize" />
 
@@ -181,6 +187,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/outdoor"
+                        android:layout_marginTop="@dimen/radio_button_margin"
                         android:textColor="@color/dark_grey"
                         android:textSize="@dimen/radio_button_textsize" />
 
@@ -197,6 +204,7 @@
                             android:layout_marginBottom="10dp"
                             android:onClick="onLocationRadioButtonClicked"
                             android:text="@string/something_else"
+                            android:layout_marginTop="@dimen/radio_button_margin"
                             android:textColor="@color/dark_grey"
                             android:textSize="@dimen/radio_button_textsize" />
 
@@ -207,6 +215,7 @@
                             android:backgroundTint="@color/dark_grey"
                             android:hint="@string/some_examples"
                             android:textColor="@color/dark_grey"
+                            android:layout_marginTop="@dimen/radio_button_margin"
                             android:textSize="@dimen/radio_button_textsize" />
 
                     </LinearLayout>
