--- a/app/src/main/res/layout/activity_initial_survey2.xml
+++ b/app/src/main/res/layout/activity_initial_survey2.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".InitialSurvey2">
+    tools:context=".initial_survey.InitialSurvey2">
 
     <RelativeLayout
         android:layout_width="match_parent"
