--- a/app/src/main/res/layout/activity_experience_sampling2.xml
+++ b/app/src/main/res/layout/activity_experience_sampling2.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ExperienceSamplingActivity2">
+    tools:context=".experience_sampling.ExperienceSamplingActivity2">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -191,6 +191,7 @@
                         android:text="@string/outdoor"
                         android:layout_marginTop="@dimen/radio_button_margin"
                         android:textColor="@color/dark_grey"
+                        android:onClick="onLocationRadioButtonClicked"
                         android:textSize="@dimen/radio_button_textsize" />
 
 
